--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
 	"version": "0.2.1",
 	"description": "Browser SDK for Shake",
 	"module": "./dist/browser.js",
-	"browser":"./dist/browser.umd.cjs",
+	"main": "./dist/browser.js",
+	"browser":"./dist/browser.umd.js",
 	"style": "./dist/main.css",
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1"
