--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
 	"name": "@shakebugs/browser",
-	"version": "0.2.3",
+	"version": "0.2.4",
 	"description": "Browser SDK for Shake",
 	"module": "./dist/browser.js",
 	"main": "./dist/browser.js",
 	"browser":"./dist/browser.umd.js",
 	"style": "./dist/main.css",
+	"types": "./dist/browser.d.ts",
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1"
 	},
