--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
 	"name": "@shakebugs/browser",
-	"version": "0.5.1",
+	"type": "module",
+	"version": "0.5.2",
 	"description": "Browser SDK for Shake",
 	"main": "./dist/browser.js",
 	"style": "./dist/main.css",
